# ai-manus

./: .env.example  AGENTS.md  LICENSE  README.md  README_zh.md  ai-manus.code-workspace  docker-compose-development.yml  docker-compose-example.yml  docker-compose.yml
backend/: README.md  README_zh.md  pyproject.toml
backend/app/: main.py
backend/app/application/services/: agent_service.py  file_service.py
backend/app/core/: config.py
backend/app/domain/models/: memory.py  session.py
backend/app/domain/services/: agent_domain_service.py  chat_idempotency_service.py  gateway_task_runner.py  openfang_task_runner.py
backend/app/infrastructure/: logging.py
backend/app/infrastructure/models/: documents.py
backend/app/infrastructure/repositories/: mongo_session_repository.py
backend/app/interfaces/: dependencies.py
backend/app/interfaces/api/: session_routes.py
backend/app/interfaces/schemas/: event.py  file.py  session.py
gateway/: .env.example  Dockerfile  README.md  pyproject.toml
gateway/app/: main.py
gateway/app/core/: auth.py  config.py  logging.py  middleware.py
gateway/tests/: test_chat_completions.py  test_health.py  test_token_lifecycle.py
sandbox/: .dockerignore  Dockerfile  Dockerfile.base  pyproject.toml  supervisord.conf
sandbox/app/api/: router.py
sandbox/app/core/: config.py  middleware.py
sandbox/app/runner/: __init__.py  daemon.py  main.py
sandbox/app/schemas/: runtime.py  runtime_runner.py
sandbox/app/services/: runtime.py  runtime_agent.py  runtime_browser.py  runtime_credential_store.py  runtime_mcp.py  runtime_run_registry.py  runtime_runner.py  runtime_search.py  runtime_session_id.py  runtime_store.py  secret_cipher.py  shell.py
sandbox/tests/: conftest.py  test_api_file.py  test_plan_act_flow_loop_controls.py  test_runtime_agent_service.py  test_runtime_mcp_service.py  test_runtime_runner_api.py  test_runtime_runner_daemon.py  test_runtime_runner_daemon_toolchain.py  test_runtime_runner_service.py  test_runtime_search_service.py  test_runtime_service.py  test_runtime_store.py
(+165 files in other folders)
