[project]
name = "sandbox"
version = "0.1.0"
description = "Sandbox service for AI Manus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.12.1",
    "cryptography>=46.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "langchain>=1.0.7",
    "langchain-anthropic>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "mcp>=1.9.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
]
